assets/css/darkMode.css
@media (prefers-color-scheme: dark) {
  /* login: */
  #main {
    background-color: #121212 !important;
  }

  body.md-default-theme,
  body,
  html.md-default-theme,
  html {
    color: #fff !important;
  }

  md-input-container.md-threema-theme .md-input,
  md-input-container.md-threema-theme .md-input::placeholder {
    color: #fff !important;
  }

  md-dialog.md-threema-theme {
    color: #fff !important;
    background-color: #121212 !important;
  }

  /* chat selection list: */
  #navigation-header {
    background-color: #272727 !important;
  }

  #navigation-conversations {
    background-color: #121212 !important;
  }

  #navigation-conversations .conversation-wrapper .conversation,
  #navigation-contacts .contact {
    border-left: 8px solid #121212 !important;
  }

  #navigation-conversations .conversation-wrapper .conversation.active,
  #navigation-conversations .conversation-wrapper .conversation:hover,
  #navigation-contacts .contact:hover {
    border-color: #272727 !important;
    background-color: #272727 !important;
  }

  #navigation-conversations .conversation-wrapper .conversation .conversation-box .receiver-box {
    color: #f5f2f2 !important;
  }

  #navigation-conversations .conversation-wrapper .conversation .conversation-box .message-box .latest-message {
    color: #9ba0a6 !important;
  }

  #navigation-conversations .conversation-wrapper .conversation.starred {
    border-image:
      linear-gradient(
        to right,
        #ffc107,
        #ffc107 50%,
        #121212 50%,
        #121212 100%
      )
      1 100% !important;
  }

  #navigation-conversations .conversation-wrapper .conversation.unread {
    border-image:
      linear-gradient(
        to right,
        #f44236,
        #f44236 50%,
        #121212 50%,
        #121212 100%
      )
      1 100% !important;
  }

  #navigation-conversations .conversation-wrapper {
    border-bottom: 1px solid #121212 !important;
  }

  .material-icons.md-dark {
    color: #fff !important;
  }

  .material-icons.md-medium-dark {
    color: #fff !important;
  }

  .message-icon img {
    filter: invert(0.8) !important;
  }

  #navigation-header .search input[type="search"] {
    background-color: #272727 !important;
    border: 1px solid #323232 !important;
    color: #fff !important;
  }

  .verification-dots div {
    background-color: #e0e0e0 !important;
  }

  .verification-dots.level3 div {
    background-color: #10a65e !important;
  }

  .verification-dots.level2 div:nth-of-type(1),
  .verification-dots.level2 div:nth-of-type(2) {
    background-color: #ff9700 !important;
  }

  .verification-dots.level1 div:nth-of-type(1) {
    background-color: #f44236 !important;
  }

  #messenger.show-detail #navigation {
    border-right: 1px solid #323232 !important;
  }

  /* chat history: */
  #messenger #detail > div.ng-scope .detail-header {
    background-color: #272727 !important;
  }

  compose-area > div:first-child > div:nth-of-type(2) {
    background-color: #272727 !important;
    border: 1px solid #323232 !important;
  }

  .md-button.md-icon-button.header-back-button md-icon {
    color: #fff !important;
  }

  md-icon img {
    filter: invert(0.8) !important;
  }

  #conversation #conversation-footer {
    background-color: #121212 !important;
    z-index: 2;
  }

  #conversation-chat .chat .message-in .message-body {
    background-color: #666 !important;
  }

  #conversation-chat .chat .message-in .bubble-triangle::before,
  #conversation-chat .chat .message-in .bubble-triangle::after {
    background-color: #666 !important;
  }

  #conversation-chat .chat .message-out .message-body {
    background-color: #303030 !important;
  }

  #conversation-chat .chat .message-out .bubble-triangle::before,
  #conversation-chat .chat .message-out .bubble-triangle::after {
    background-color: #303030 !important;
  }

  #conversation-chat .chat .message-status .message-body {
    background-color: #ece7c9 !important;
  }

  .message-body .message-quote .message-quote-content {
    border-color: #4cb050 !important;
  }

  .message-body .message-quote .message-name {
    color: #a5a5a5 !important;
  }

  #conversation {
    background-image: none !important;
    background-color: #121212 !important;
  }

  #conversation::before {
    background-image: url("../img/wallpaper_light.png?") !important;
    opacity: 0.12;
    content: " ";
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
  }

  .twemoji-picker {
    background-color: #272727 !important;
  }

  .twemoji-picker .tab label {
    border: 1px solid #272727 !important;
    background: #272727 !important;
  }

  .twemoji-picker .tab [type="radio"]:checked ~ label {
    background: #121212 !important;
  }

  .twemoji-picker .tab .content {
    border: 1px solid #121212 !important;
    background: #121212 !important;
  }

  #conversation #conversation-quote {
    background-color: #1f1f1f !important;
  }

  #conversation-chat .chat .message-body .message-info {
    color: #d0d0d0 !important;
  }

  .material-icons.md-dark.user-ack,
  .material-icons.md-medium-dark.user-ack {
    color: #4cb050 !important;
  }

  .material-icons.md-dark.user-dec,
  .material-icons.md-medium-dark.user-dec {
    color: #ff9700 !important;
  }

  compose-area > div:first-child > div:nth-of-type(2) div.compose:empty::before {
    color: #939393 !important;
  }

  /* menu: */
  md-menu-content.md-threema-theme {
    background-color: #2c2c2c !important;
  }

  md-menu-content.md-threema-theme md-menu-item {
    color: #fff !important;
  }

  md-menu-content.md-threema-theme md-menu-item md-icon {
    color: #d0d0d0 !important;
  }

  .md-subheader.md-threema-theme {
    background-color: #272727 !important;
  }

  .md-button.md-threema-theme.md-primary {
    color: #b8b8b8 !important;
  }

  md-dialog.md-default-theme,
  md-dialog {
    color: #e5e5e5 !important;
    background-color: #353535 !important;
  }

  /* profiles: */
  md-card.md-threema-theme {
    color: #fff !important;
    background-color: #121212 !important;
  }

  #messenger #detail > div.ng-scope {
    background-color: #272727 !important;
  }

  .md-button.md-threema-theme.md-raised {
    background-color: #272727 !important;
    color: #fff !important;
  }

  .md-button.md-threema-theme.md-warn.md-fab,
  .md-button.md-threema-theme.md-warn.md-raised {
    background-color: rgb(255, 87, 34) !important;
  }

  #detail md-icon.md-threema-theme {
    color: #fff !important;
  }

  md-autocomplete.md-threema-theme {
    background: #272727 !important;
  }

  md-autocomplete.md-threema-theme input {
    color: #fff !important;
  }

  .md-button.md-threema-theme.md-primary.md-fab,
  .md-button.md-threema-theme.md-primary.md-raised {
    color: #000 !important;
    background-color: #fff !important;
  }

  .avatar-area.overview > .avatar-image {
    background-color: #323232 !important;
  }

  .md-autocomplete-suggestions-container.md-threema-theme li {
    color: #fff !important;
  }

  .md-autocomplete-suggestions-container.md-threema-theme {
    background: #272727 !important;
  }

  md-dialog-content#dialogContent_my-threema-id-dialog > div.md-dialog-content.center {
    background-color: #fff !important;
  }

  md-icon > img[alt="QR"] {
    filter: invert(1) saturate(1%) brightness(1000%) !important;
  }
}

